tests/cases/control-flow/errors/while-let-static-payload-owner-widen-recheck.ari
enum Maybe {
  None,
  Some(i64),
}

fn main() -> i64 {
  let item: Maybe = Some(3);
  let token: own i64 = 11;
  while let Some(1..=3) = item {
    drop token;
  }
  return 0;
}
